# GitHub-Action-Security-Validator

./: .gitignore  CONTRIBUTING.md  LICENSE  README copy.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ci.yml
gasv/: __init__.py  cli.py  scanner.py
gasv/rules/: __init__.py  injection.py  permissions.py  pinning.py  secrets.py  triggers.py
tests/: test_rules.py
tests/fixtures/clean/: clean_workflow.yml
tests/fixtures/vulnerable/: vulnerable_workflow.yml
